<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.langchao.mamanage.activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_alignParentLeft="true"
        android:background="@color/title">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize" />

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:src="@mipmap/zhongnanjitun" />


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bg_edittext"
            android:drawableLeft="@mipmap/user"
            android:drawablePadding="5dp"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/hintuser"
            android:padding="8dip"
            android:singleLine="true"
            android:textColorHint="#AAAAAA"
            android:textSize="15dip" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_below="@+id/editText1"
            android:background="@drawable/bg_edittext"
            android:drawableLeft="@mipmap/password"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/hintpassword"
            android:inputType="textPassword"
            android:padding="8dip"
            android:singleLine="true"
            android:textColorHint="#AAAAAA"
            android:textSize="15dip" />
    </RelativeLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autologin"
        android:id="@+id/checkBox"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignRight="@+id/outStorage"
        android:layout_alignEnd="@+id/outStorage" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:text="@string/login"
        android:id="@+id/outStorage"
        android:layout_margin="40px"
        android:gravity="center"
        app:bootstrapBrand="primary"
        android:textSize="@dimen/textsize"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:layout_below="@+id/outStorage"
        android:layout_alignRight="@+id/checkBox"
        android:layout_alignEnd="@+id/checkBox"
        android:src="@mipmap/langtao" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:gravity="center_vertical|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/top_wries"
        android:id="@+id/relativeLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="350px"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/imageView7"
                    android:src="@android:drawable/ic_menu_info_details" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgetpassword"
                    android:textSize="@dimen/textsize"
                    android:layout_gravity="center"
                    android:id="@+id/textView3" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView8"
                android:src="@mipmap/wries"
                android:layout_weight="0.06" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="350px"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/service">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/imageView9"
                    android:src="@android:drawable/ic_menu_info_details" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server"
                    android:textSize="@dimen/textsize"
                    android:layout_gravity="center"
                    android:id="@+id/textView4" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
