<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.langchao.mamanage.activity.ServiceActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_alignParentLeft="true"
        android:background="@color/title">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/server"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@mipmap/arrow_left"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200px"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="30px"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server"
            android:id="@+id/textView"
            android:layout_below="@+id/relativeLayout1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@drawable/wries"
            android:layout_height="100px" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/serveradress"
                android:gravity="center"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:id="@+id/textView10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:gravity="center_vertical"
                android:id="@+id/textView12" />
        </LinearLayout>
    </LinearLayout>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_margin="40px"
        android:text="@string/next"
        android:id="@+id/outStorage"
        android:gravity="center"
        app:bootstrapBrand="primary"
        android:textSize="@dimen/textsize"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
