<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.langchao.mamanage.activity.MainActivity">
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_alignParentLeft="true"
        android:background="@color/title">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/newgoods"
            android:textColor="@color/white"
            android:textSize="@dimen/headsize" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="150px"
                android:layout_margin="30px"
                android:gravity="center"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:id="@+id/imageViewSjsc"
                    android:src="@mipmap/sjsc" />

                <TextView
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:text="数据上传"
                    android:gravity="center"
                    android:textSize="@dimen/textsize"
                    android:id="@+id/textView2" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="150px"
                android:layout_margin="30px"
                android:gravity="center"
                android:layout_height="match_parent" >

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:id="@+id/imageViewRkxz"
                    android:src="@mipmap/syncout" />

                <TextView
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:text="入库下载"
                    android:gravity="center"
                    android:textSize="@dimen/textsize"
                    android:id="@+id/textView7" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="150px"
                android:layout_margin="30px"
                android:gravity="center"
                android:layout_height="match_parent"
                android:visibility="visible">

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:id="@+id/imageViewCkxz"
                    android:src="@mipmap/syncin" />

                <TextView
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:text="出库下载"
                    android:gravity="center"
                    android:textSize="@dimen/textsize"
                    android:id="@+id/textView13" />
            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content" >



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="150px"
                android:layout_margin="30px"
                android:gravity="center"
                android:layout_height="match_parent" >

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:id="@+id/imageViewdirectout"
                    android:src="@mipmap/directout" />

                <TextView
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:text="@string/directout"
                    android:gravity="center"
                    android:textSize="@dimen/textsize"
                    android:id="@+id/textView5" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="150px"
                android:layout_margin="30px"
                android:gravity="center"
                android:layout_height="match_parent" >

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:id="@+id/imageViewinstorage"
                    android:src="@mipmap/instorage" />

                <TextView
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:text="@string/instorage"
                    android:gravity="center"
                    android:textSize="@dimen/textsize"
                    android:id="@+id/textView6" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="150px"
                android:layout_margin="30px"
                android:gravity="center"
                android:layout_height="match_parent" >

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:id="@+id/imageViewoutstorage"
                    android:src="@mipmap/outstorage" />

                <TextView
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:text="@string/outstorage"
                    android:gravity="center"
                    android:textSize="@dimen/textsize"
                    android:id="@+id/textView8" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content" >



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="150px"
                android:layout_margin="30px"
                android:gravity="center"
                android:layout_height="match_parent" >

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:id="@+id/imageViewsupplement"
                    android:src="@mipmap/supplement" />

                <TextView
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:text="@string/supplement"
                    android:gravity="center"
                    android:textSize="@dimen/textsize"
                    android:id="@+id/textView9" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="150px"
                android:layout_margin="30px"
                android:gravity="center"
                android:layout_height="match_parent"
                android:id="@+id/clear">

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:id="@+id/clearData"
                    android:src="@mipmap/deletebtn" />

                <TextView
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:text="清除\n离线数据"
                    android:gravity="center"
                    android:textSize="@dimen/textsize"
                    android:id="@+id/textView81" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="150px"
                android:layout_margin="30px"
                android:gravity="center"
                android:layout_height="match_parent"
                android:id="@+id/set">

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:id="@+id/imageView13"
                    android:src="@mipmap/set" />

                <TextView
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:text="@string/set"
                    android:gravity="center"
                    android:textSize="@dimen/textsize"
                    android:id="@+id/textView11" />
            </LinearLayout>




        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
