<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/shape_order_bg"
              android:orientation="vertical"
              android:padding="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_dir_out_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1234567890"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_alignTop="@+id/imageView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="37dp"
            android:layout_marginStart="37dp" />

        <TextView
            android:id="@+id/tv_dir_out_order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="2016-06-26 11:01:11"
            android:textColor="@color/gray_66"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:src="@mipmap/itemlogo"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray_cc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="南通中南集团"
            android:textSize="16sp"
            android:textColor="@color/crimson"
            android:id="@+id/tv_dir_out_order_supplier"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_material"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="南通中南集团南通中南集团南通中南集团南通中南集团南通中南集团南通中南集团南通中南集团南通中南集团南通中南集团南通中南集团"
            android:maxLines="2"
            android:ellipsize="end"
            android:singleLine="false"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/tv_dir_out_order_material"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="御景园 33、34#"
            android:textSize="16sp"
            android:maxLines="1"
            android:textColor="@color/black"
            android:id="@+id/tv_dir_out_order_building"/>
    </LinearLayout>

</LinearLayout>