<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_alignParentLeft="true"
        android:background="@color/title">

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow_left"/>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="直入直出确认"
            android:textColor="@color/white"
            android:textSize="@dimen/headsize"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:paddingBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.61"
                android:id="@+id/tv_item_number"
                android:text="@string/order_no"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/tv_dir_out_no"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray_cc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.61"
                android:text="@string/supplier"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/tv_dir_out_supply"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray_cc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.61"
                android:text="@string/build"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/tv_dir_out_build"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="0dp"
            android:background="@color/gray_cc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/contact"
                android:visibility="gone"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/tv_dir_out_contact"
                android:textColor="@color/black"
                android:visibility="gone"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray_cc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.61"
                android:text="@string/getter"
                android:layout_gravity="center_vertical"
                android:id="@+id/tv_dir_out_get"
                android:textSize="16sp"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:id="@+id/sp_dir_out_get"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_cc"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="材料分录"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_alignParentBottom="true"
            android:background="@color/title"
            android:id="@+id/rl_bottom">


            <TextView
                android:id="@+id/img_dir_out_choose"
                android:layout_width="160px"
                android:layout_height="100px"
                android:layout_alignParentRight="true"

                android:text="确认"
                android:textSize="30dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/orangered"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="已选品种：0"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@+id/tv_dir_out_choose"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        </RelativeLayout>
        <ListView
            android:id="@+id/lv_dir_out_m"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#00000000"
            android:dividerHeight="5dp"
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:layout_above="@+id/rl_bottom"/>
    </RelativeLayout>
</LinearLayout>
